# regime-forecasting

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  run_experiments.py  test.py  test2.py
artifacts/diagnostics/: regime_stability_summary.csv  regime_stability_summary.tex  regime_stability_windows.csv
artifacts/regimes/results_2026-02-03T18-32-06Z/y_absret_h1/hmm_ridge_hard_K2/: hmm_interpretability.npz  oos_regime_probs.csv  per_regime_metrics.csv
artifacts/regimes/results_2026-02-03T18-32-06Z/y_absret_h1/hmm_ridge_hard_K3/: oos_regime_probs.csv  per_regime_metrics.csv
artifacts/regimes/results_2026-02-03T18-32-06Z/y_absret_h1/hmm_ridge_hard_K4/: hmm_interpretability.npz  oos_regime_probs.csv  per_regime_metrics.csv
artifacts/regimes/results_2026-02-03T18-32-06Z/y_absret_h1/hmm_ridge_soft_K2/: oos_regime_probs.csv  per_regime_metrics.csv
artifacts/regimes/results_2026-02-03T18-32-06Z/y_absret_h1/hmm_ridge_soft_K3/: oos_regime_probs.csv  per_regime_metrics.csv
configs/: final.yaml
scripts/: plot_hvfut_rmse_by_regime_auto.py  regime_stability.py
src/: config.py
src/data/: features.py  make_dataset.py  pipeline.py
src/eval/: evaluate.py  evaluate_regime.py  metrics.py  subsets.py  walk_forward.py
src/experiments/: logging.py  per_regime_compare.py  per_regime_metrics.py  plot_results.py  regime_artifacts.py  regime_conditional_metrics.py  regime_shading.py  selections.py
src/models/: baselines.py  regime_conditioned.py
src/regime/: characterize.py  hmm.py
(+31 files in other folders)
